<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_2"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_4"
        app:lp_keyboard_button_text="@string/button1_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/pin_code_button_1"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_3"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_5"
        app:lp_keyboard_button_text="@string/button2_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pin_code_button_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_6"
        app:lp_keyboard_button_text="@string/button3_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_5"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_7"
        app:lp_keyboard_button_text="@string/button4_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_2"
        app:layout_constraintStart_toEndOf="@id/pin_code_button_4"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_6"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_8"
        app:lp_keyboard_button_text="@string/button5_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_3"
        app:layout_constraintStart_toEndOf="@id/pin_code_button_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_9"
        app:lp_keyboard_button_text="@string/button6_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_8"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_0"
        app:lp_keyboard_button_text="@string/button7_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_5"
        app:layout_constraintStart_toEndOf="@id/pin_code_button_7"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_9"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_0"
        app:lp_keyboard_button_text="@string/button8_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_6"
        app:layout_constraintStart_toEndOf="@id/pin_code_button_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pin_code_button_0"
        app:lp_keyboard_button_text="@string/button9_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/pin_code_button_clear"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/pin_code_button_8"
        app:lp_keyboard_button_text="@string/button0_large_text" />

    <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
        android:id="@+id/pin_code_button_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/pin_code_button_9"
        app:layout_constraintTop_toBottomOf="@id/pin_code_button_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lp_keyboard_button_image="@drawable/ic_backspace_grey600_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>